p2/app-two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deux
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-deux
  template:
    metadata:
      labels:
        app: hello-deux
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
