p2/hello3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-three
  template:
    metadata:
      labels:
        app: hello-three
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
