p2/script.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
  lables:
    S
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: nginx

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.3
        ports:
        -containerPort: 80
